--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -1,3 +1,29 @@
 <main class="main">
-    
+    <div class="main_body container">
+        <div class="main_row">
+            <div class="main_content">
+                <h1 class="main_content-title">Awesome tools for
+                    Designer & Developer<span>.</span></h1>
+                    <div class="main_content-text text">
+                        Antool is a web collection of information on paid or free Design and Development tools
+                    </div>
+                    <form class="main_content-search" action="">
+                        <input class="main_content-input" type="search" placeholder="find more than 430+ tools...">
+                        <button type="submit" class="main_content-button button" type="submit">Search</button>
+                    </form>
+                    <div class="main_content-socials">
+                        <a href="#">
+                            <svg class="icon"><use xlink:href="#facebook"></use></svg>
+                        </a>
+                        <a href="#">
+                            <svg class="icon"><use xlink:href="#instagram"></use></svg>
+                        </a>
+                        <a href="#">
+                            <svg class="icon"><use xlink:href="#twitter"></use></svg>
+                        </a>
+                    </div>
+            </div>
+            <div class="main_img"><img src="../img/main-img.png" alt=""></div>
+        </div>
+    </div>
 </main>
