--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -27,3 +27,135 @@
         </div>
     </div>
 </main>
+<div class="cards">
+    <div class="cards_body container">
+        <div class="cards_about">
+            <div class="cards_title title">Most Popular Tools</div>
+            <div class="cards_text text">Tools for the best Designers and Developers
+                most popularly used in the world</div>
+        </div>
+        <div class="cards_cards">
+            <label class="cards_item" for="card_1">
+                <input class="cards_item-radio" name="card" type="radio" id="card_1">
+                <div class="cards_item-body">
+                    <div class="cards_item-title">
+                        <img src="../img/figma.svg" alt="">
+                        <div class="cards_title-text">
+                            <h4 class="cards_title-name">FIGMA</h4>
+                            <h6 class="cards_title-condition">Free</h6>
+                        </div>
+                    </div>
+                    <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="cards_item-btns">
+                        <div class="cards_item-icons">
+                            <svg class="icon"><use xlink:href="#heart"></use></svg>
+                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                        </div>
+                        <button class="cards_item-button" type="submit">Visit</button>
+                    </div>
+                </div>
+            </label>
+            <label class="cards_item" for="card_2">
+                <input class="cards_item-radio" name="card" type="radio" id="card_2">
+                <div class="cards_item-body">
+                    <div class="cards_item-title">
+                        <img src="../img/figma.svg" alt="">
+                        <div class="cards_title-text">
+                            <h4 class="cards_title-name">FIGMA</h4>
+                            <h6 class="cards_title-condition">Free</h6>
+                        </div>
+                    </div>
+                    <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="cards_item-btns">
+                        <div class="cards_item-icons">
+                            <svg class="icon"><use xlink:href="#heart"></use></svg>
+                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                        </div>
+                        <button class="cards_item-button" type="submit">Visit</button>
+                    </div>
+                </div>
+            </label>
+            <label class="cards_item" for="card_3">
+                <input class="cards_item-radio" name="card" type="radio" id="card_3">
+                <div class="cards_item-body">
+                    <div class="cards_item-title">
+                        <img src="../img/figma.svg" alt="">
+                        <div class="cards_title-text">
+                            <h4 class="cards_title-name">FIGMA</h4>
+                            <h6 class="cards_title-condition">Free</h6>
+                        </div>
+                    </div>
+                    <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="cards_item-btns">
+                        <div class="cards_item-icons">
+                            <svg class="icon"><use xlink:href="#heart"></use></svg>
+                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                        </div>
+                        <button class="cards_item-button" type="submit">Visit</button>
+                    </div>
+                </div>
+            </label>
+            <label class="cards_item" for="card_4">
+                <input class="cards_item-radio" name="card" type="radio" id="card_4">
+                <div class="cards_item-body">
+                    <div class="cards_item-title">
+                        <img src="../img/figma.svg" alt="">
+                        <div class="cards_title-text">
+                            <h4 class="cards_title-name">FIGMA</h4>
+                            <h6 class="cards_title-condition">Free</h6>
+                        </div>
+                    </div>
+                    <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="cards_item-btns">
+                        <div class="cards_item-icons">
+                            <svg class="icon"><use xlink:href="#heart"></use></svg>
+                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                        </div>
+                        <button class="cards_item-button" type="submit">Visit</button>
+                    </div>
+                </div>
+            </label>
+            <label class="cards_item" for="card_5">
+                <input class="cards_item-radio" name="card" type="radio" id="card_5">
+                <div class="cards_item-body">
+                    <div class="cards_item-title">
+                        <img src="../img/figma.svg" alt="">
+                        <div class="cards_title-text">
+                            <h4 class="cards_title-name">FIGMA</h4>
+                            <h6 class="cards_title-condition">Free</h6>
+                        </div>
+                    </div>
+                    <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="cards_item-btns">
+                        <div class="cards_item-icons">
+                            <svg class="icon"><use xlink:href="#heart"></use></svg>
+                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                        </div>
+                        <button class="cards_item-button" type="submit">Visit</button>
+                    </div>
+                </div>
+            </label>
+            <label class="cards_item" for="card_6">
+                <input class="cards_item-radio" name="card" type="radio" id="card_6">
+                <div class="cards_item-body">
+                    <div class="cards_item-title">
+                        <img src="../img/figma.svg" alt="">
+                        <div class="cards_title-text">
+                            <h4 class="cards_title-name">FIGMA</h4>
+                            <h6 class="cards_title-condition">Free</h6>
+                        </div>
+                    </div>
+                    <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                    <div class="cards_item-btns">
+                        <div class="cards_item-icons">
+                            <svg class="icon"><use xlink:href="#heart"></use></svg>
+                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                        </div>
+                        <button class="cards_item-button" type="submit">Visit</button>
+                    </div>
+                </div>
+            </label>
+            
+        </div>
+    </div>
+</div>
