--- a/#src/blocks/_header.html
+++ b/#src/blocks/_header.html
@@ -14,9 +14,9 @@
                 <nav class="menu_body">
                     <ul class="menu_list">
                         <li><a href="#" class="menu_link">Home</a></li>
-                        <li><a href="#" class="menu_link menu-arrow">Categories <svg class="icon menu-arrow">
+                        <li><span href="#" class="menu_link menu-arrow">Categories <svg class="icon menu-arrow">
                             <use xlink:href="#chevron-down-solid"></use>
-                          </svg></a>
+                          </svg></span>
                             <ul class="submenu_list">
                                 <li><a href="" class="submenu_link">Category item #1</a></li>
                                 <li><a href="" class="submenu_link">Category item #2</a></li>
