--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -37,7 +37,7 @@
         <div class="cards_cards">
             <label class="cards_item" for="card_1">
                 <input class="cards_item-radio" name="card" type="radio" id="card_1">
-                <div class="cards_item-body">
+                <div class="cards_item-body card_body">
                     <div class="cards_item-title">
                         <img src="../img/figma.svg" alt="">
                         <div class="cards_title-text">
@@ -48,28 +48,32 @@
                     <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                     <div class="cards_item-btns">
                         <div class="cards_item-icons">
-                            <svg class="icon"><use xlink:href="#heart"></use></svg>
-                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                            <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                            <a href="#">
+                                <svg class="icon"><use xlink:href="#download"></use></svg>
+                            </a>
                         </div>
                         <button class="cards_item-button" type="submit">Visit</button>
                     </div>
                 </div>
             </label>
             <label class="cards_item" for="card_2">
-                <input class="cards_item-radio" name="card" type="radio" id="card_2">
-                <div class="cards_item-body">
+                <input class="cards_item-radio" name="card" type="radio" checked id="card_2">
+                <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/figma.svg" alt="">
+                        <img src="../img/sketch.svg" alt="">
                         <div class="cards_title-text">
-                            <h4 class="cards_title-name">FIGMA</h4>
-                            <h6 class="cards_title-condition">Free</h6>
+                            <h4 class="cards_title-name">Sketch</h4>
+                            <h6 class="cards_title-condition">Trial & Paid</h6>
                         </div>
                     </div>
                     <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                     <div class="cards_item-btns">
                         <div class="cards_item-icons">
-                            <svg class="icon"><use xlink:href="#heart"></use></svg>
-                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                            <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                            <a href="#">
+                                <svg class="icon"><use xlink:href="#download"></use></svg>
+                            </a>
                         </div>
                         <button class="cards_item-button" type="submit">Visit</button>
                     </div>
@@ -77,19 +81,21 @@
             </label>
             <label class="cards_item" for="card_3">
                 <input class="cards_item-radio" name="card" type="radio" id="card_3">
-                <div class="cards_item-body">
+                <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/figma.svg" alt="">
+                        <img src="../img/_visual-studio-code.svg" alt="">
                         <div class="cards_title-text">
-                            <h4 class="cards_title-name">FIGMA</h4>
+                            <h4 class="cards_title-name">Visual Studio Code</h4>
                             <h6 class="cards_title-condition">Free</h6>
                         </div>
                     </div>
                     <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                     <div class="cards_item-btns">
                         <div class="cards_item-icons">
-                            <svg class="icon"><use xlink:href="#heart"></use></svg>
-                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                            <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                            <a href="#">
+                                <svg class="icon"><use xlink:href="#download"></use></svg>
+                            </a>
                         </div>
                         <button class="cards_item-button" type="submit">Visit</button>
                     </div>
@@ -97,19 +103,21 @@
             </label>
             <label class="cards_item" for="card_4">
                 <input class="cards_item-radio" name="card" type="radio" id="card_4">
-                <div class="cards_item-body">
+                <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/figma.svg" alt="">
+                        <img src="../img/notion.svg" alt="">
                         <div class="cards_title-text">
-                            <h4 class="cards_title-name">FIGMA</h4>
-                            <h6 class="cards_title-condition">Free</h6>
+                            <h4 class="cards_title-name">Notion</h4>
+                            <h6 class="cards_title-condition">Free & Paid</h6>
                         </div>
                     </div>
                     <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                     <div class="cards_item-btns">
                         <div class="cards_item-icons">
-                            <svg class="icon"><use xlink:href="#heart"></use></svg>
-                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                            <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                            <a href="#">
+                                <svg class="icon"><use xlink:href="#download"></use></svg>
+                            </a>
                         </div>
                         <button class="cards_item-button" type="submit">Visit</button>
                     </div>
@@ -117,19 +125,21 @@
             </label>
             <label class="cards_item" for="card_5">
                 <input class="cards_item-radio" name="card" type="radio" id="card_5">
-                <div class="cards_item-body">
+                <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/figma.svg" alt="">
+                        <img src="../img/slack.svg" alt="">
                         <div class="cards_title-text">
-                            <h4 class="cards_title-name">FIGMA</h4>
-                            <h6 class="cards_title-condition">Free</h6>
+                            <h4 class="cards_title-name">Slack</h4>
+                            <h6 class="cards_title-condition">Free & Paid</h6>
                         </div>
                     </div>
                     <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                     <div class="cards_item-btns">
                         <div class="cards_item-icons">
-                            <svg class="icon"><use xlink:href="#heart"></use></svg>
-                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                            <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                            <a href="#">
+                                <svg class="icon"><use xlink:href="#download"></use></svg>
+                            </a>
                         </div>
                         <button class="cards_item-button" type="submit">Visit</button>
                     </div>
@@ -137,25 +147,29 @@
             </label>
             <label class="cards_item" for="card_6">
                 <input class="cards_item-radio" name="card" type="radio" id="card_6">
-                <div class="cards_item-body">
+                <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/figma.svg" alt="">
+                        <img src="../img/invision-icon.svg" alt="">
                         <div class="cards_title-text">
-                            <h4 class="cards_title-name">FIGMA</h4>
-                            <h6 class="cards_title-condition">Free</h6>
+                            <h4 class="cards_title-name">Invision</h4>
+                            <h6 class="cards_title-condition">Free & Paid</h6>
                         </div>
                     </div>
                     <div class="cards_item-text text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
                     <div class="cards_item-btns">
                         <div class="cards_item-icons">
-                            <svg class="icon"><use xlink:href="#heart"></use></svg>
-                            <svg class="icon"><use xlink:href="#download"></use></svg>
+                            <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                            <a href="#">
+                                <svg class="icon"><use xlink:href="#download"></use></svg>
+                            </a>
                         </div>
                         <button class="cards_item-button" type="submit">Visit</button>
                     </div>
                 </div>
             </label>
-            
+            <div class="cards_button-body">
+                <button class="cards_button button">Load more</button>
+            </div>
         </div>
     </div>
 </div>
