edits cards&placeholder

--- a/#src/blocks/_header.html
+++ b/#src/blocks/_header.html
@@ -3,7 +3,7 @@
         <div class="header_row">
             <div class="header_logo">
                 <a class="header_logo-link" href="#">
-                    <div class="header_logo-img"><img src="../img/header_logo.png" alt=""></div>
+                    <div class="header_logo-img"><img src="img/header_logo.png" alt=""></div>
                     <div class="header_logo-title">antools.</div>
                 </a>
             </div>
