--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -23,7 +23,7 @@
                         </a>
                     </div>
             </div>
-            <div class="main_img"><img src="../img/main-img.png" alt=""></div>
+            <div class="main_img"><img src="img/main-img.png" alt=""></div>
         </div>
     </div>
 </main>
@@ -39,7 +39,7 @@
                 <input class="cards_item-radio" name="card" type="radio" id="card_1">
                 <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/figma.svg" alt="">
+                        <img src="img/figma.svg" alt="">
                         <div class="cards_title-text">
                             <h4 class="cards_title-name">FIGMA</h4>
                             <h6 class="cards_title-condition">Free</h6>
@@ -61,7 +61,7 @@
                 <input class="cards_item-radio" name="card" type="radio" checked id="card_2">
                 <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/sketch.svg" alt="">
+                        <img src="img/sketch.svg" alt="">
                         <div class="cards_title-text">
                             <h4 class="cards_title-name">Sketch</h4>
                             <h6 class="cards_title-condition">Trial & Paid</h6>
@@ -83,7 +83,7 @@
                 <input class="cards_item-radio" name="card" type="radio" id="card_3">
                 <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/_visual-studio-code.svg" alt="">
+                        <img src="img/_visual-studio-code.svg" alt="">
                         <div class="cards_title-text">
                             <h4 class="cards_title-name">Visual Studio Code</h4>
                             <h6 class="cards_title-condition">Free</h6>
@@ -105,7 +105,7 @@
                 <input class="cards_item-radio" name="card" type="radio" id="card_4">
                 <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/notion.svg" alt="">
+                        <img src="img/notion.svg" alt="">
                         <div class="cards_title-text">
                             <h4 class="cards_title-name">Notion</h4>
                             <h6 class="cards_title-condition">Free & Paid</h6>
@@ -127,7 +127,7 @@
                 <input class="cards_item-radio" name="card" type="radio" id="card_5">
                 <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/slack.svg" alt="">
+                        <img src="img/slack.svg" alt="">
                         <div class="cards_title-text">
                             <h4 class="cards_title-name">Slack</h4>
                             <h6 class="cards_title-condition">Free & Paid</h6>
@@ -149,7 +149,7 @@
                 <input class="cards_item-radio" name="card" type="radio" id="card_6">
                 <div class="cards_item-body card_body">
                     <div class="cards_item-title">
-                        <img src="../img/invision-icon.svg" alt="">
+                        <img src="img/invision-icon.svg" alt="">
                         <div class="cards_title-text">
                             <h4 class="cards_title-name">Invision</h4>
                             <h6 class="cards_title-condition">Free & Paid</h6>
