--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -173,3 +173,18 @@
         </div>
     </div>
 </div>
+<div class="brands">
+    <div class="brands_body container">
+        <div class="brands_item">
+            <div class="brands_title">Trusted more than 150+ brand</div>
+            <div class="brands_brands">
+                <ul class="brands_list">
+                    <li><a href="" class="brands_links"><img src="img/logos_microsoft.svg" alt=""></a></li>
+                    <li><a href="" class="brands_links"><img src="img/logos_google.svg" alt=""></a></li>
+                    <li><a href="" class="brands_links"><img src="img/logos_slack.svg" alt=""></a></li>
+                    <li><a href="" class="brands_links"><img src="img/logos_wordpress.svg" alt=""></a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
