--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -188,3 +188,104 @@
         </div>
     </div>
 </div>
+<div class="newcomer">
+    <div class="newcomer_body container">
+        <div class="newcomer_row">
+            <div class="newcomer_info">
+                <div class="newcomer_info-title title">Newcomer Tools</div>
+                <div class="newcomer_info-text text">Wow! see the latest update of the most recommended tools from reliable designers and developers</div>
+                <button class="newcomer_info-btn button">Explore more</button>
+            </div>
+            <div class="newcomer_cards">
+                <label class="cards_item newcards_item" for="newcard_1">
+                    <input class="cards_item-radio" name="card" type="radio" id="newcard_1">
+                    <div class="cards_item-body card_body">
+                        <div class="cards_item-title">
+                            <img src="img/zeplin.svg" alt="">
+                            <div class="cards_title-text">
+                                <h4 class="cards_title-name">Zeplin</h4>
+                                <h6 class="cards_title-condition">Free & Paid</h6>
+                            </div>
+                        </div>
+                        <div class="cards_item-text text newcards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        <div class="cards_item-btns">
+                            <div class="cards_item-icons">
+                                <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                                <a href="#">
+                                    <svg class="icon"><use xlink:href="#download"></use></svg>
+                                </a>
+                            </div>
+                            <button class="cards_item-button" type="submit">Visit</button>
+                        </div>
+                    </div>
+                </label>
+                <label class="cards_item newcards_item" for="newcard_2">
+                    <input class="cards_item-radio" name="card" type="radio" id="newcard_2">
+                    <div class="cards_item-body card_body">
+                        <div class="cards_item-title">
+                            <img src="img/jb_phpstorm.svg" alt="">
+                            <div class="cards_title-text">
+                                <h4 class="cards_title-name">PHPStorm</h4>
+                                <h6 class="cards_title-condition">Free</h6>
+                            </div>
+                        </div>
+                        <div class="cards_item-text text newcards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        <div class="cards_item-btns">
+                            <div class="cards_item-icons">
+                                <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                                <a href="#">
+                                    <svg class="icon"><use xlink:href="#download"></use></svg>
+                                </a>
+                            </div>
+                            <button class="cards_item-button" type="submit">Visit</button>
+                        </div>
+                    </div>
+                </label>
+                <label class="cards_item newcards_item" for="newcard_3">
+                    <input class="cards_item-radio" name="card" type="radio" id="newcard_3">
+                    <div class="cards_item-body card_body">
+                        <div class="cards_item-title">
+                            <img src="img/jb_toolbox_app.svg" alt="">
+                            <div class="cards_title-text">
+                                <h4 class="cards_title-name">Toolbox</h4>
+                                <h6 class="cards_title-condition">Free</h6>
+                            </div>
+                        </div>
+                        <div class="cards_item-text text newcards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        <div class="cards_item-btns">
+                            <div class="cards_item-icons">
+                                <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                                <a href="#">
+                                    <svg class="icon"><use xlink:href="#download"></use></svg>
+                                </a>
+                            </div>
+                            <button class="cards_item-button" type="submit">Visit</button>
+                        </div>
+                    </div>
+                </label>
+                <label class="cards_item newcards_item" for="newcard_4">
+                    <input class="cards_item-radio" name="card" type="radio" id="newcard_4">
+                    <div class="cards_item-body card_body">
+                        <div class="cards_item-title">
+                            <img src="img/procreate.svg" alt="">
+                            <div class="cards_title-text">
+                                <h4 class="cards_title-name">Procreate</h4>
+                                <h6 class="cards_title-condition">Paid</h6>
+                            </div>
+                        </div>
+                        <div class="cards_item-text text newcards-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</div>
+                        <div class="cards_item-btns">
+                            <div class="cards_item-icons">
+                                <svg class="icon icon_like"><use xlink:href="#heart"></use></svg>
+                                <a href="#">
+                                    <svg class="icon"><use xlink:href="#download"></use></svg>
+                                </a>
+                            </div>
+                            <button class="cards_item-button" type="submit">Visit</button>
+                        </div>
+                    </div>
+                </label>
+            </div>
+        </div>
+    </div>
+</div>
