--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -289,3 +289,60 @@
         </div>
     </div>
 </div>
+<div class="slaider">
+    <div class="slaider_body container">
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                  <div class="swiper-slide-img">
+                      <img src="img/slide.png" alt="">
+                      <div class="swiper-slide-imgname"><h5>Ronald Richards</h5><h6>Product Manager</h6></div>
+                    </div>
+                  <div class="swiper-slide-text">Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</div>
+              </div>
+              <div class="swiper-slide">
+                <div class="swiper-slide-img">
+                    <img src="img/slide.png" alt="">
+                    <div class="swiper-slide-imgname"><h5>Donald Johnson</h5><h6>Engineer</h6></div>
+                  </div>
+                <div class="swiper-slide-text">Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-img">
+                    <img src="img/slide.png" alt="">
+                    <div class="swiper-slide-imgname"><h5>Kevin Brown</h5><h6>Programmer</h6></div>
+                  </div>
+                <div class="swiper-slide-text">Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</div>
+            </div>
+            <div class="swiper-slide">
+                <div class="swiper-slide-img">
+                    <img src="img/slide.png" alt="">
+                    <div class="swiper-slide-imgname"><h5>Fred Moore</h5><h6>Product Manager</h6></div>
+                  </div>
+                <div class="swiper-slide-text">Incididunt cillum do sint sint enim ullamco id deserunt mollit qui reprehenderit do. Velit ex tempor cillum ad sint occaecat. Do nulla velit labore occaecat do deserunt Lorem magna officia incididunt consectetur amet. Sunt consectetur veniam minim ex commodo sint non. Occaecat aute officia excepteur non laboris id qui ad.</div>
+            </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+          </div>
+    </div>
+</div>
+<div class="contributor">
+    <div class="contributor_body">
+        <div class="contributor_row">
+            <div class="contributor_info">
+                <div class="contributor_info-title title">Become a contributor?</div>
+                <div class="contributor_info-text text">Join us and get tips & tricks to become a great Designer and Developer</div>
+            </div>
+            <div class="contributor_form">
+                <form action="">
+                    <div class="contributor_form-item">
+                        <input class="contributor_form-input" type="text" placeholder="Enter your email...">
+                        <button class="contributor_form-btn button">Join Us</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
