--- a/#src/blocks/_header.html
+++ b/#src/blocks/_header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header lock-padding">
     <div class="header_container container">
         <div class="header_row">
             <div class="header_logo">
@@ -30,8 +30,8 @@
                 </nav>
             </div>
             <div class="header_account">
-                <div class="header_account-login"><a href="">Login</a></div>
-                <button class="header_account-btn button">Sign Up</button>
+                <div class="header_account-login"><a href="#popup" class="popup_link">Login</a></div>
+                <a href="#popup" class="header_account-btn button popup_link">Sign Up</a>
             </div>
         </div>
     </div>
