--- a/#src/blocks/_main.html
+++ b/#src/blocks/_main.html
@@ -3,7 +3,8 @@
         <div class="main_row">
             <div class="main_content">
                 <h1 class="main_content-title">Awesome tools for
-                    Designer & Developer<span>.</span></h1>
+                    Designer & Developer<span>.</span>
+                    </h1>
                     <div class="main_content-text text">
                         Antool is a web collection of information on paid or free Design and Development tools
                     </div>
